# PeopleAsPlanner

./: .gitignore  .gitmodules  LICENSE  README.md
sim_ws/src/data_play/: CMakeLists.txt  package.xml
sim_ws/src/data_play/dataset/scene_config_30/: crossing_0.json  promenade_0.json  roundabout_0.json
sim_ws/src/data_play/launch/: eval_cv_pred2nav.launch  eval_dwa.launch  eval_height.launch  eval_orca.launch  eval_our.launch  eval_sf.launch  eval_sgan_pred2nav.launch
sim_ws/src/data_play/models/animation/s1/: actor_1.sdf
sim_ws/src/data_play/msg/: ModelInfo.msg
sim_ws/src/data_play/scripts/: check_visibility.py  cv_pred2nav.py  dwa_interface.py  env_vis.py  from_txt_to_table.py  height.py  matric_cal_new.py  model_velocity_node.py  orca.py  our_robot.py  recorder_new.py  robot_controller.py  sf.py  sgan_pred2nav.py
sim_ws/src/data_play/src/: ActorPlugin.cc  ActorTrajectoryROSPlugin.cpp  ModelFollowerPlugin.cpp  TrajectoryFollowerPlugin.cpp  actor_trigger.cpp
sim_ws/src/data_play/temp/crossing_0/actor/: actor_110.txt  actor_111.txt  actor_113.txt  actor_116.txt  actor_117.txt  actor_118.txt  actor_119.txt  actor_120.txt  actor_121.txt  actor_122.txt  actor_123.txt  actor_124.txt  actor_125.txt  actor_126.txt  actor_127.txt  actor_129.txt  actor_130.txt  actor_131.txt  actor_132.txt  actor_133.txt  actor_134.txt  actor_135.txt  actor_136.txt  actor_137.txt  actor_138.txt  actor_140.txt  actor_141.txt  actor_146.txt  actor_148.txt  actor_149.txt  actor_150.txt  actor_151.txt  actor_152.txt  actor_153.txt  actor_154.txt  actor_155.txt  actor_156.txt  actor_157.txt  (+6 more)
(+123 files in other folders)
